--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<head>
 		<title>video carousel</title>
 	</head>
